# LearningAgent

./: .gitignore  ACTIVITY_FIX_COMPLETE.md  ACTIVITY_LOGGING_FIX_SUMMARY.md  API_ERRORS_FIXED.md  API_ERRORS_FIX_SUMMARY.md  API_PROVIDER_ERROR_SOLUTION.md  COMPLETE_SYSTEM_FIX_SUMMARY.md  COMPREHENSIVE_SCORING_SYSTEM_SUMMARY.md  DASHBOARD_GUIDE.md  DAY3_IMPLEMENTATION_COMPLETE.md  DAY4_FRONTEND_INTEGRATION_GUIDE.md  DEPLOYMENT_GUIDE.md  Dockerfile  ENGAGEMENT_MODEL_FIX_SUMMARY.md  ENHANCED_COURSE_RECOMMENDATIONS.md  ENHANCED_LEARNING_AGENT_README.md  ENHANCED_LEARNING_SYSTEM_COMPLETE.md  FRONTEND_MODULES_GUIDE.md  INTEGRATION_COMPLETE_GUIDE.md  LEARNER_UPDATE_FEATURE.md  Learning_Agent_API_Postman_Collection.json  Learning_Agent_Environment.json  Learning_Agent_FIXED_Postman_Collection.json  MINIMAX_ERROR_COMPLETE_RESOLUTION.md  MINIMAX_ERROR_DEFINITIVE_SOLUTION.md  MINIMAX_ERROR_FIX_SUMMARY.md  MONGODB_SCHEMA_ENHANCEMENT_COMPLETE.md  MONGODB_URI_FIX_SUMMARY.md  Postman_API_Guide.md  QUICK_FIX_GUIDE.md  README.md  README_ENV.md  RECOMMENDATIONS_FIX_COMPLETE.md  RECOMMENDATION_SYSTEM_COMPLETE.md  SCORE_BASED_RECOMMENDATION_FIX.md  SCORING_RECOMMENDATION_GUIDE.md  SCORING_SYSTEM_DOCUMENTATION.md  SCORING_SYSTEM_SUMMARY.md  TESTING_GUIDE.md  __init__.py  (+91 more)
AIagent/: requirements.txt  server.py
LearningAgent/: pyproject.toml
config/: __init__.py  db_config.py
controllers/: learner_controller.py
data/: courses.json  learners.json
ml/: completion_predictor.pkl  comprehensive_scoring.py  difficulty_matching_engine.py  kmeans.pkl  kmeans.py  knowledge_gap_detector.py  (+13 more)
(+21 files in other folders)
