[project]
name = "learningagent"
version = "0.1.0"
description = "Learning Agent - Streamlit Edition for Learner Management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.51.0",
    "pymongo>=4.5.0",
    "pydantic>=2.5.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.3",
    "joblib>=1.3.2",
    "Faker>=19.12.0",
    "marshmallow>=3.20.1",
    "pandas>=2.0.3",
]
